--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 .logo-green {
     color: #236645;
 }
@@ -43,4 +41,18 @@
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
+}
+
+.card {
+    margin: 1rem;
+    background: white;
+    box-shadow: 2px 4px 25px rgba(0,0,0,.1);
+    border-radius: 15px;
+    border-color: #236645; 
+    overflow: hidden;
+    padding: 0.5rem;
+}
+
+#output {
+    overflow: auto;
 }
